<resources>
    <string name="app_name">graylog</string>
    <string name="log_read_token_label">Read Token method</string>
    <string name="log_login_label">Login method</string>
    <string name="log_token_label">Token</string>
    <string name="scan">Scan</string>
    <string name="login">Login</string>
    <string name="select">Select</string>
    <string name="log_stream_label">Stream</string>
    <string name="filter">filter</string>
    <string name="home">Home</string>
    <string name="graylog_url">URL graylog</string>
    <string name="log_username_label">Username</string>
    <string name="log_password_label">Password</string>
    <string name="more_filter">Field selector</string>
    <string name="default_query">*</string>

    <string name="malformed_url">OMG! The URL you specified is malformed</string>
    <string name="server_error">OMG! something\'s got wront with graylog server</string>
    <string name="bad_user_pass">OMG! your username/password might be wrong</string>

    <string name="last_5_minutes">Last 5 minutes</string>
    <string name="last_10_minutes">Last 10 minutes</string>
    <string name="last_15_minutes">Last 15 minutes</string>
    <string name="last_1_hour">Last hour</string>
</resources>
